Fix: Improperly aligned header content fixed.

--- a/src/components/styles/main.css
+++ b/src/components/styles/main.css
@@ -77,6 +77,8 @@
 
 .avatar-container {
   display: inline-block;
+  justify-content: space-around;
+  display: flex;
 }
 
 .avatar-container .notification {
